--- a/Scrap.ipynb
+++ b/Scrap.ipynb
@@ -7,7 +7,8 @@
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
-   }
+   },
+   "version": "3.6.9"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -20,10 +21,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
    "metadata": {},
-   "execution_count": null
+   "outputs": [],
+   "source": []
   }
  ]
 }
