Adding function introspection

--- a/Scrap.ipynb
+++ b/Scrap.ipynb
@@ -21,10 +21,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def my_func(a, b, *args):\n",
+    "    i = 100\n",
+    "    j = i * a\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<code object my_func at 0x7f1141bfa810, file \"<ipython-input-1-3d3fd79dda34>\", line 1>"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_func.__code__."
+   ]
   }
  ]
 }
