Adding closures, extended uppacking and partial fucntions

--- a/Scrap.ipynb
+++ b/Scrap.ipynb
@@ -21,33 +21,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_func(a, b, *args):\n",
-    "    i = 100\n",
-    "    j = i * a\n",
-    "    "
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib(n):\n",
+    "\n",
+    "    def fibs():\n",
+    "        a = 0\n",
+    "        b = 1\n",
+    "        while True:\n",
+    "            yield a\n",
+    "            a, b = b, a + b\n",
+    "    \n",
+    "    return next(itertools.islice(fibs(), n, None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "<code object my_func at 0x7f1141bfa810, file \"<ipython-input-1-3d3fd79dda34>\", line 1>"
+      "text/plain": "55"
      },
-     "execution_count": 2,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "my_func.__code__."
+    "fib(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = itertools.islice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Help on class islice in module itertools:\n\nclass islice(builtins.object)\n |  islice(iterable, stop) --> islice object\n |  islice(iterable, start, stop[, step]) --> islice object\n |  \n |  Return an iterator whose next() method returns selected values from an\n |  iterable.  If start is specified, will skip all preceding elements;\n |  otherwise, start defaults to zero.  Step defaults to one.  If\n |  specified as another value, step determines how many values are \n |  skipped between successive calls.  Works like a slice() on a list\n |  but returns an iterator.\n |  \n |  Methods defined here:\n |  \n |  __getattribute__(self, name, /)\n |      Return getattr(self, name).\n |  \n |  __iter__(self, /)\n |      Implement iter(self).\n |  \n |  __new__(*args, **kwargs) from builtins.type\n |      Create and return a new object.  See help(type) for accurate signature.\n |  \n |  __next__(self, /)\n |      Implement next(self).\n |  \n |  __reduce__(...)\n |      Return state information for pickling.\n |  \n |  __setstate__(...)\n |      Set state information for unpickling.\n\n"
+    }
+   ],
+   "source": [
+    "help(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
