Adding modules importing

--- a/Scrap.ipynb
+++ b/Scrap.ipynb
@@ -20,73 +20,63 @@
  },
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import itertools"
-   ]
+    "a = 100"
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 0
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "def fib(n):\n",
+    "a\n",
+    ""
+   ],
+   "cell_type": "code",
+   "outputs": [],
+   "metadata": {},
+   "execution_count": 0
+  },
+  {
+   "source": [
+    "import python_algorithms"
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'python_algorithms'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-525b696517b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpython_algorithms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'python_algorithms'"
+     ]
+    }
+   ],
+   "metadata": {},
+   "execution_count": 4
+  },
+  {
+   "source": [
     "\n",
-    "    def fibs():\n",
-    "        a = 0\n",
-    "        b = 1\n",
-    "        while True:\n",
-    "            yield a\n",
-    "            a, b = b, a + b\n",
-    "    \n",
-    "    return next(itertools.islice(fibs(), n, None))"
-   ]
-  },
-  {
+    "import python_algorithms-0.1-py3.6.egg"
+   ],
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "55"
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-a145f5964e26>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-a145f5964e26>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import python_algorithms-0.1-py3.6.egg\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
-   "source": [
-    "fib(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = itertools.islice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Help on class islice in module itertools:\n\nclass islice(builtins.object)\n |  islice(iterable, stop) --> islice object\n |  islice(iterable, start, stop[, step]) --> islice object\n |  \n |  Return an iterator whose next() method returns selected values from an\n |  iterable.  If start is specified, will skip all preceding elements;\n |  otherwise, start defaults to zero.  Step defaults to one.  If\n |  specified as another value, step determines how many values are \n |  skipped between successive calls.  Works like a slice() on a list\n |  but returns an iterator.\n |  \n |  Methods defined here:\n |  \n |  __getattribute__(self, name, /)\n |      Return getattr(self, name).\n |  \n |  __iter__(self, /)\n |      Implement iter(self).\n |  \n |  __new__(*args, **kwargs) from builtins.type\n |      Create and return a new object.  See help(type) for accurate signature.\n |  \n |  __next__(self, /)\n |      Implement next(self).\n |  \n |  __reduce__(...)\n |      Return state information for pickling.\n |  \n |  __setstate__(...)\n |      Set state information for unpickling.\n\n"
-    }
-   ],
-   "source": [
-    "help(a)"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -94,6 +84,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "source": [
+    "import python-algorithms\n",
+    ""
+   ],
+   "cell_type": "code",
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-1fb662e11cf5>, line 1)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-1fb662e11cf5>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    import python-algorithms\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "metadata": {},
+   "execution_count": 1
   }
  ]
 }
